# Blog

./: README.md  pyproject.toml
apps/blog/: models.py
apps/blog/migrations/: 0001_initial.py
mysite/: settings.py
