[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Gabriel Torres <gabrieltggv29@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
